Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis
Peter L Jones
Devin Anderson

---------------------------
  Jackdmp changes log
---------------------------

2009-12-02 Stephane Letz  <letz@grame.fr>

	* Special code in JackCoreAudio driver to handle completely buggy Digidesign CoreAudio user-land driver. 

2009-12-01 Stephane Letz  <letz@grame.fr>

	* Fix port_rename callback : now both old name and new name are given as parameters.

2009-11-30 Stephane Letz  <letz@grame.fr>

	* Devin Anderson patch for Jack FFADO driver issues with lost MIDI bytes between periods (and more). 

2009-11-29 Stephane Letz  <letz@grame.fr>

	* More robust sample rate change handling code in JackCoreAudioDriver.

2009-11-24 Stephane Letz  <letz@grame.fr>

	* Dynamic choice of maximum port number.

2009-11-23 Stephane Letz  <letz@grame.fr>

	* Peter L Jones patch for NetJack1 compilation on Windows.

2009-11-20 Stephane Letz  <letz@grame.fr>

	* Version 1.9.5 started.
	* Client debugging code improved.

2009-11-18 Stephane Letz  <letz@grame.fr>

	* Sync JackCoreAudioAdapter code with JackCoreAudioDriver.

2009-11-17 Stephane Letz  <letz@grame.fr>

	* In JackCoreAudio driver, clock drift compensation in aggregated devices working.
	* In JackCoreAudio driver, clock drift compensation semantic changed a bit : when on, does not activate if not needed (same clock domain).

2009-11-16 Stephane Letz  <letz@grame.fr>

	* In JackCoreAudio driver, (possibly) clock drift compensation when needed in aggregated devices.

2009-11-14 Stephane Letz  <letz@grame.fr>

	* Sync with JACK1 : -r parameter now used for no-realtime, realtime (-R) is now default, usable backend given vie platform.

2009-11-13 Stephane Letz  <letz@grame.fr>

	* Better memory allocation error checking in ringbuffer.c, weak import improvements.